# diffalarm

./: README.md  foo.html  pyproject.toml  tox.ini
backend/: package.json  pnpm-lock.yaml  pyproject.toml  vite.config.ts
backend.old/backend/: main.py
backend/backend/: main.py  singletonAiohttp.py
diffalarm/: __main__.py  beep.py  page.py
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: App.tsx  Form.tsx  PageData.tsx  Search.tsx  UpperHeader.tsx  atom.ts  axios.ts  beep.tsx  compare.tsx  hook.ts
frontend/src/test/: example.ts  wemake.ts
template/: wemakeprice.yml
